--- a/Section_2/app/templates/nav_bar.html
+++ b/Section_2/app/templates/nav_bar.html
@@ -10,7 +10,7 @@
         <ul class="navbar-nav ml-auto">
 
             <li class="nav-item active">
-                <a class="nav-link" href="/">Adoption</a>
+                <a class="nav-link" href="/adoption">Adoption</a>
             </li>
 
             <li class="nav-item active">
