--- a/Section_2/app/static/base_style.css
+++ b/Section_2/app/static/base_style.css
@@ -38,6 +38,7 @@ p {
 
 
 
+
 .container {
     padding: 1em;
 }
@@ -71,6 +72,17 @@ p {
     color:var(--alt_text_colour)
 }
 
+
+#card {
+    border-radius: 15px;
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+#card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
 #large_button {
     width:100%;
     font-size: 1em;
@@ -93,6 +105,12 @@ p {
     background-color: #fffaf3; 
     border-radius: 0.5em; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+#image_fit {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 
