--- a/Section_2/app/templates/account.html
+++ b/Section_2/app/templates/account.html
@@ -4,6 +4,16 @@
 
     {% include 'nav_bar.html' %}
         <div class= "container">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'success' if category == 'success' else 'danger' }} alter-dismissable fade show" role="alert">{{ message }}
+                            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            
             <div id = "form_template">
                 {% if not seller%}
                     <h1>Become a Seller Today!</h1>
@@ -86,14 +96,6 @@
                             {% endfor %}
                     </div>
 
-                    {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for message in messages%}
-                            <p class="success-message">{{ message }}</p>
-                        {% endfor %}
-                    {% endif %}
-                    {% endwith %}
-
                     <button type="submit" class="btn btn-primary">Update Details</button>
                 </form> 
             </div>
@@ -103,7 +105,7 @@
                     <button class="btn btn-primary" id = "large_button">Log Out</button>
                 </a>
             </div>
-            
+
         </div>
 
         
