--- a/Section_2/app/templates/listing_page.html
+++ b/Section_2/app/templates/listing_page.html
@@ -1,79 +1,98 @@
 {% extends "base.html" %}
 {% block content %}
-   {% include 'nav_bar.html' %}
-   <div class="container mt-4" id="form_template">
-       <h1>{{ product.name }}</h1>
-       
-       <div id="imageSlideShow" class="carousel slide" data-ride="carousel">
-           <div class="carousel-inner">
-               {% for image in product.images %}
-               <div class="carousel-item {{ 'active' if loop.index == 1 else ''}}" style="height: 25em; overflow: hidden; border:1em; background-color:#56355a;">
-                   <img src="../static/{{ image }}" alt="{{ product.name }}" id="image_fit" class="d-block w-100">
-               </div>
-               {% endfor %}
-           </div>
+{% include 'nav_bar.html' %}
+<div class="container mt-4" id="form_template">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ 'success' if category == 'success' else 'danger' }} alter-dismissable fade show" role="alert">{{ message }}
+                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+        
+        
+    <h1>{{ product.name }}</h1>
+    
+    <div id="imageSlideShow" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            {% for image in product.images %}
+            <div class="carousel-item {{ 'active' if loop.index == 1 else ''}}" style="height: 25em; overflow: hidden; border:1em; background-color:#56355a;">
+                <img src="../static/{{ image }}" alt="{{ product.name }}" id="image_fit" class="d-block w-100">
+            </div>
+            {% endfor %}
+        </div>
 
-           {% if image_count > 1 %}
-               <a class="carousel-control-prev" href="#imageSlideShow" role="button" data-slide="prev">
-                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                   <span class="sr-only">Previous</span>
-               </a>
-               <a class="carousel-control-next" href="#imageSlideShow" role="button" data-slide="next">
-                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                   <span class="sr-only">Next</span>
-               </a>
-           {% endif %}
-       </div>
+        {% if image_count > 1 %}
+            <a class="carousel-control-prev" href="#imageSlideShow" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#imageSlideShow" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        {% endif %}
+    </div>
 
-       <div class="row mt-4">
-           <div class="col-md-9">
+    <div class="row mt-4">
+        <div class="col-md-8">
                 <h2>Product Details</h2>
                 <p>{{ product.description }}</p>
 
                 <br>
-               
+            
                 <h2>Seller Details</h2>
                 <p>
-                   <strong>Name:</strong>     {{ seller.business_name}}<br>
-                   <strong>Phone:</strong>     {{ seller.business_phone}}<br>
-                   <strong>Email:</strong>     {{ seller.business_email}}<br>
-                   <strong>Address:</strong>     {{ seller.business_address}}<br>
-                   <strong>Country:</strong>     {{ seller.country }}<br>
+                <strong>Name:</strong>     {{ seller.business_name}}<br>
+                <strong>Phone:</strong>     {{ seller.business_phone}}<br>
+                <strong>Email:</strong>     {{ seller.business_email}}<br>
+                <strong>Address:</strong>     {{ seller.business_address}}<br>
+                <strong>Country:</strong>     {{ seller.country }}<br>
                 </p>
-           </div>
-           
-           <div class="col-md-3" style="text-align:right;">
-               <div class="card" style="height:100%;">
-                   <div class="card-body">
-                       <h3>£{{ product.price }}</h3>
-                       <div class="mb-3" style="font-size:1em;">
-                           {% if product.in_stock %}
-                               <span class="badge badge-success d-block w-100">In Stock</span>
-                               <div class="form-group mt-3" style="padding:0;">
-                                   <select class="form-control" id="quantity" name="quantity">
-                                       {% for i in range(1, product.quantity + 1) %}
-                                           {% if i <= 10 %}
-                                               <option value="{{ i }}">{{ i }}</option>
-                                           {% endif %}
-                                       {% endfor %}
-                                   </select>
-                               </div>
-                           {% else %}
-                               <span class="badge badge-danger d-block w-100">Out of Stock</span>
-                           {% endif %}
-                       </div>
-                       
-                       {% if product.in_stock %}
-                           <form method="POST">
-                               <button type="submit" name="addToCart" class="btn btn-primary" style="width:100%; font-size:0.8em; margin-bottom:0.7em;">Add to Cart</button>
-                           </form>
-                       {% endif %}
-                       <form method="POST">
-                           <button type="submit" name="addToWishlist" class="btn btn-primary" style="width:100%; font-size:0.8em;">Add to Wishlist</button>
-                       </form>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </div>
+        </div>
+        
+        <div class="col-md-4" style="text-align:right;">
+            <div class="card" style="height:100%;">
+                <div class="card-body">
+                    <h3>£{{ product.price }}</h3>
+                    <div class="mb-3" style="font-size:1em;">
+                        {% if product.in_stock %}
+                            <span class="badge badge-success d-block w-100">In Stock</span>
+
+                            {% if user.is_authenticated %}
+                                <form method="POST" action="{{ url_for('addToCart', listing_id=product.product_id)}}">
+                                    <div class="form-group mt-3" style="padding:0;">
+                                        <select class="form-control" id="quantity" name="quantity">
+                                            {% for i in range(1, product.quantity + 1) %}
+                                                {% if i <= 10 %}
+                                                    <option value="{{ i }}" style="margin-top:0.2em;">{{ i }}</option>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                    <button type="submit" name="addToCart" class="btn btn-primary" style="width:100%; font-size:0.8em; margin-top:0.7em;">Add to Cart</button>
+                                </form>
+                            {% else %}
+                                <form action="{{ url_for('login') }}">
+                                    <button type="submit" name="sendToLogin"  class="btn btn-primary" style="width:100%; font-size:0.8em; margin-top:0.7em;">Login to Buy</button>
+                                </form>
+                            {% endif %}
+
+                        {% else %}
+                            <span class="badge badge-danger d-block w-100">Out of Stock</span>
+                        {% endif %}
+                    </div>
+                    
+                    {% if user.is_authenticated %}
+                        <form method="POST" action="">
+                            <button type="submit" name="addToWishlist" class="btn btn-primary" style="width:100%; font-size:0.8em; margin-top:0.7em;">Add to Wishlist</button>
+                        </form>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
