--- a/Section_2/app/templates/cart.html
+++ b/Section_2/app/templates/cart.html
@@ -17,7 +17,7 @@
                 {% for product in products %}
                     <div class="row" id="form_template">
                         <div class="col-md-3">
-                            <img src="../static/{{ product.image }}" alt="{{ product.name }}" id="image_fit" class="d-block w-100">
+                            <img src="{{ url_for('renderImage', image_id=product.image) }}" alt="{{ product.name }}" id="image_fit" class="d-block w-100">
                         </div>
 
                         <div class="col-md-5">
